--- a/sass/plugins/woocommerce/_components.scss
+++ b/sass/plugins/woocommerce/_components.scss
@@ -82,7 +82,7 @@ p.stars {
 			line-height: 1;
 			font-family: star;
 			content: "\53";
-			color: $color__text-main;
+			color: $text-main;
 			text-indent: 0;
 			opacity: 0.25;
 		}
@@ -91,7 +91,7 @@ p.stars {
 
 			~ a::before {
 				content: "\53";
-				color: $color__text-main;
+				color: $text-main;
 				opacity: 0.25;
 			}
 		}
@@ -121,7 +121,7 @@ p.stars {
 
 			~ a::before {
 				content: "\53";
-				color: $color__text-main;
+				color: $text-main;
 				opacity: 0.25;
 			}
 		}
