--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,6 +12,12 @@ License URI: LICENSE
 Text Domain: affl
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
+***************
+HEY YOU! This site uses sass to generate this css file. To prevent future developers from hating you, edit the sass files, not this.
+
+ALSO: when upgrading, give a version bump here and also at the top of the functions file.
+***************
+
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned.
 
