--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -1,17 +1,17 @@
-$color__background-body: #fff;
-$color__background-screen: #f1f1f1;
-$color__background-hr: #ccc;
-$color__background-button: #e6e6e6;
-$color__background-pre: #eee;
-$color__background-ins: #fff9c0;
+$background: #15232a;
+$background-screen: #f1f1f1;
+$background-hr: #ccc;
+$background-button: #e6e6e6;
+$background-pre: #eee;
+$background-ins: #fff9c0;
 
-$color__text-screen: #21759b;
-$color__text-input: #666;
-$color__text-input-focus: #111;
-$color__link: #4169e1; //royalblue
-$color__link-visited: #800080; //purple
-$color__link-hover: #191970; //midnightblue
-$color__text-main: #404040;
+$text-screen: #21759b;
+$text-input: #666;
+$text-input-focus: #111;
+$color__link: #f7bf3b; //yellow
+$color__link-visited: #f7bf3b;
+$color__link-hover: #f7bf3b;
+$text-main: #ffffff;
 
 $color__border-button: #ccc #ccc #bbb;
 $color__border-button-hover: #ccc #bbb #aaa;
