--- a/sass/base/elements/_fields.scss
+++ b/sass/base/elements/_fields.scss
@@ -14,13 +14,13 @@ input[type="datetime"],
 input[type="datetime-local"],
 input[type="color"],
 textarea {
-	color: $color__text-input;
+	color: $text-input;
 	border: 1px solid $color__border-input;
 	border-radius: 3px;
 	padding: 3px;
 
 	&:focus {
-		color: $color__text-input-focus;
+		color: $text-input-focus;
 	}
 }
 
