--- a/sass/base/typography/_typography.scss
+++ b/sass/base/typography/_typography.scss
@@ -4,9 +4,9 @@ input,
 select,
 optgroup,
 textarea {
-	color: $color__text-main;
+	color: $text-main;
 	font-family: $font__main;
-	font-size: 1rem;
+	font-size: 14px;
 	line-height: $font__line-height-body;
 }
 
