relocate sass & js folders inside _assets folder, templates folder inside _inc folder

--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -13,7 +13,7 @@ Text Domain: affl
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
 ***************
-HEY YOU! This site uses sass to generate this css file. To prevent future developers from hating you, edit the sass files, not this.
+HEY YOU! This site uses sass to generate this css file. I HIGHLY recommend continuing that precedent, and not edit this file directly.
 
 ALSO: when upgrading, give a version bump here and also at the top of the functions file.
 ***************
