style footer, finish links to social media (as set up in customizer)

--- a/_assets/sass/abstracts/variables/_colors.scss
+++ b/_assets/sass/abstracts/variables/_colors.scss
@@ -10,7 +10,7 @@ $text-input: #666;
 $text-input-focus: #111;
 $color__link: #f7bf3b; //yellow
 $color__link-visited: #f7bf3b;
-$color__link-hover: #f7bf3b;
+$color__link-hover: #dba62a;
 $text-main: #ffffff;
 
 $color__border-button: #ccc #ccc #bbb;
