--- a/_assets/sass/components/_components.scss
+++ b/_assets/sass/components/_components.scss
@@ -10,6 +10,10 @@
 --------------------------------------------- */
 @import "comments/comments";
 
+/* Footer
+--------------------------------------------- */
+@import "footer";
+
 /* Widgets
 --------------------------------------------- */
 @import "widgets/widgets";
