--- a/_assets/sass/components/_components.scss
+++ b/_assets/sass/components/_components.scss
@@ -10,6 +10,10 @@
 --------------------------------------------- */
 @import "comments/comments";
 
+/* Header
+--------------------------------------------- */
+@import "header";
+
 /* Footer
 --------------------------------------------- */
 @import "footer";
