--- a/_assets/sass/abstracts/variables/_colors.scss
+++ b/_assets/sass/abstracts/variables/_colors.scss
@@ -1,4 +1,5 @@
 $background: #15232a;
+$background-highlight: #384f5b;
 $background-screen: #f1f1f1;
 $background-hr: #ccc;
 $background-button: #e6e6e6;
