--- a/_assets/sass/components/_footer.scss
+++ b/_assets/sass/components/_footer.scss
@@ -1,9 +1,13 @@
+.footer-wrapper {
+	padding-top: 4.5em;
+}
+
 .site-footer {
-	position:relative;
-	filter:url('data:image/svg+xml;
+	position: relative;
+	filter: url('data:image/svg+xml;
 	charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur in="SourceAlpha" stdDeviation="30" /><feOffset dx="1" dy="1" result="offsetblur" /><feFlood flood-color="rgba(0,0,0,0.6)" /><feComposite in2="offsetblur" operator="in" /><feMerge><feMergeNode /><feMergeNode in="SourceGraphic" /></feMerge></filter></svg>#filter');
-	-webkit-filter:drop-shadow(0 0 30px rgba(0,0,0,.6));
-	filter:drop-shadow(0 0 30px rgba(0,0,0,.6));
+	-webkit-filter: drop-shadow(0 0 30px rgba(0,0,0,.6));
+	filter: drop-shadow(0 0 30px rgba(0,0,0,.6));
 }
 .site-footer .mark {
 	margin: 0 auto 32px;
