nope, footer still sucks. Eliminate H1 top margin

--- a/_assets/sass/base/elements/_body.scss
+++ b/_assets/sass/base/elements/_body.scss
@@ -13,7 +13,16 @@ body {
 }
 
 .site {
-	min-height: 100%;
+	min-height: calc(100vh - 130px);
+
+	/* these coincide with height of .site-footer__spacer */
+	@media (min-width:600px) {
+		min-height: calc(100vh - 110px);
+	}
+
+	@media (min-width:900px) {
+		min-height: calc(100vh - 80px);
+	}
 }
 
 .site-header {
@@ -39,16 +48,16 @@ body {
 .site-main {
 	padding-bottom: 3em;
 	max-width: 63em;
-	padding: 0 80px 130px;
+	padding: 0 80px 160px;
 	margin: 0 auto;
 
-	/* these coincide with height of .site-footer__spacer */
+	/* these align with height of .site-footer__spacer */
 	@media (min-width:600px) {
-		padding-bottom: 110px;
+		padding-bottom: 140px;
 	}
 
 	@media (min-width:900px) {
-		padding-bottom: 80px;
+		padding-bottom: 110px;
 	}
 
 	.blog &,
