--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ main {
  */
 h1 {
   font-size: 2em;
-  margin: 0.67em 0; }
+  margin: 0 0 0.67em; }
 
 /* Grouping content
 	 ========================================================================== */
@@ -427,7 +427,14 @@ body {
   line-height: 1.929; }
 
 .site {
-  min-height: calc(100vh - 80px); }
+  min-height: calc(100vh - 130px);
+  /* these coincide with height of .site-footer__spacer */ }
+  @media (min-width: 600px) {
+    .site {
+      min-height: calc(100vh - 110px); } }
+  @media (min-width: 900px) {
+    .site {
+      min-height: calc(100vh - 80px); } }
 
 .site-header {
   position: relative;
@@ -447,15 +454,15 @@ body {
 .site-main {
   padding-bottom: 3em;
   max-width: 63em;
-  padding: 0 80px 130px;
+  padding: 0 80px 160px;
   margin: 0 auto;
-  /* these coincide with height of .site-footer__spacer */ }
+  /* these align with height of .site-footer__spacer */ }
   @media (min-width: 600px) {
     .site-main {
-      padding-bottom: 110px; } }
+      padding-bottom: 140px; } }
   @media (min-width: 900px) {
     .site-main {
-      padding-bottom: 80px; } }
+      padding-bottom: 110px; } }
   .blog .site-main,
   .archive .site-main {
     max-width: 75em; }
@@ -895,7 +902,6 @@ h2.entry-title {
 
 .site-footer {
   position: relative;
-  bottom: 0;
   filter: url('data:image/svg+xml;\a 	charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur in="SourceAlpha" stdDeviation="30" /><feOffset dx="1" dy="1" result="offsetblur" /><feFlood flood-color="rgba(0,0,0,0.6)" /><feComposite in2="offsetblur" operator="in" /><feMerge><feMergeNode /><feMergeNode in="SourceGraphic" /></feMerge></filter></svg>#filter');
   filter: drop-shadow(0 0 30px rgba(0, 0, 0, 0.6));
   overflow-x: clip; }
