--- a/_assets/sass/components/content/_posts-and-pages.scss
+++ b/_assets/sass/components/content/_posts-and-pages.scss
@@ -163,3 +163,16 @@ h2.entry-title {
 	font-size: 5.5em;
 	line-height: 1.04;
 }
+
+/* HOME PAGE */
+.home-logo {
+	width: 100%;
+	max-width: 414px;
+	margin: 0 auto;
+	padding: 14em 44px 0;
+
+	@media screen and (min-width: 600px) {
+		padding-right: 0;
+		padding-left: 0;
+	}
+}
